client/src/styles/Carousel.module.css
.wrap{
    width:100%;
    /* height:100%; */
    display:flex;
    justify-content: flex-start;
    align-items: center;
    position:relative;
    box-sizing: border-box;
    max-width:850px;
}
.prev{
    position:absolute;
    left:0;
    top:50%;
    cursor: pointer;
    color:darkmagenta
}
.next{
    position:absolute;
    right:0;
    top:50%;
    cursor: pointer;
    color:darkmagenta
}
.container{
    width:100%;
    height:100%;
    /* z-index: -1; */
}
.carousel{
     width:100%;
     height:100%;
     
     border-radius: 8px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: flex-start;
     position:relative;
     overflow: hidden;
     -webkit-overflow:hidden;
}
.slider{
    /* border:1px solid green; */
    display:flex;
    height:100%;
    width:100%; 
    flex-shrink: 0;
    
}
.item{
    /* flex: 0 0 20%; */
    border-radius: 8px;
    position:relative;
    width:100%;
    
    padding-top: 12%;
}
.item > img{
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    
}


/* @media screen and (min-width:980px){
 .wrap{
     width:40%;
     
 }
 .item{
      
 }
 .carousel{
     border-bottom-left-radius: 1rem;
 }
}  */

